# drawbotgrid

./: README.md  pyproject.toml
.githooks/: pre-commit
drawBotGrid/: __init__.py  aliases.py  grid.py  image.py  table.py  text.py
drawBotGrid/docs/: build_readme.py  readme-prebuild.md  snippet-00-ColumnGrid-intro.py  snippet-10-ColumnGrid-basics.py  snippet-100-BaselineGridTextBox-basics.py  snippet-110-BaselineGridTextBox-lineHeight.py  snippet-120-ColumnTextBox-basics.py  snippet-130-ColumnBaselineGridTextBox-basics.py  snippet-140-verticalAlignTextBox-basics.py  snippet-145-baselineGridTextBox-vertical_align.py  snippet-148-textOverflowTestMode.py  snippet-150-imageBox-fitting.py  snippet-160-imageBox-fit.py  snippet-170-imageBox-fill.py  snippet-180-imageBox-crop.py  snippet-190-imageBox-anchors.py  snippet-20-ColumnGrid-multiply.py  snippet-200-imageBox-scale.py  snippet-30-ColumnGrid-margins.py  snippet-40-RowGrid-basics.py  snippet-50-Grid-basics.py  snippet-60-Grid-advanced.py  snippet-70-Grid-inception.py  snippet-80-BaselineGrid-basics.py  snippet_00_ColumnGrid_intro.py  snippet_100_BaselineGridTextBox_basics.py  snippet_10_ColumnGrid_basics.py  snippet_110_BaselineGridTextBox_lineHeight.py  snippet_120_ColumnTextBox_basics.py  snippet_130_ColumnBaselineGridTextBox_basics.py  snippet_140_verticalAlignTextBox_basics.py  snippet_145_baselineGridTextBox_vertical_align.py  snippet_148_textOverflowTestMode.py  snippet_150_imageBox_fitting.py  snippet_160_imageBox_fit.py  snippet_170_imageBox_fill.py  snippet_180_imageBox_crop.py  snippet_190_imageBox_anchors.py  snippet_200_imageBox_scale.py  snippet_20_ColumnGrid_multiply.py  (+7 more)
tests/: test_grid.py  test_image.py  test_snippets.py  test_text.py
