[project]
name = "drawbotgrid"
version = "0.1.3"
description = "a little helper for grid based layout in DrawBot"
readme = "README.md"
authors = [
    {name = "Mathieu Reguer", email = "mathieu.reguer@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "drawbot",
]
license = {text = "All rights reserved"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Build Tools",
]

[tool.uv.sources]
drawbot = { git = "https://github.com/typemytype/drawbot" }

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.5",
]

[project.scripts]
build_readme = "drawBotGrid.docs.build_readme:main"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
line-ending = "auto"

[tool.coverage.run]
source = ["drawBotGrid"]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["drawBotGrid"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

